:recycle: Plan 조회 리팩토링